--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Marchzins-Bonus Rechner</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Test</h1>
-    <p>add add add add add</p>
+
+    <main class="rechner-container">
+        <h1>Marchzins-Bonus Rechner</h1>
+        <p>Berechnen Sie den Zinsbonus für Kundinnen und Kunden mit Geburtstag im aktuellen Monat.</p>
+
+        <form id="bonus-form">
+            <div class="input-gruppe">
+                <label for="sparkapital">Sparkapital (CHF)</label>
+                <input type="number" id="sparkapital" placeholder="z.B. 50000" required>
+            </div>
+
+            <div class="input-gruppe">
+                <label for="zinssatz">Bonus-Zinssatz (%)</label>
+                <input type="number" id="zinssatz" step="0.01" placeholder="z.B. 1.5" required>
+            </div>
+
+            <div class="input-gruppe">
+                <label for="geburtstag">Geburtstag (Tag im Monat)</label>
+                <input type="number" id="geburtstag" min="1" max="31" placeholder="z.B. 18" required>
+            </div>
+
+            <button type="submit">Berechnen</button>
+        </form>
+
+        <div id="ergebnis-bereich" class="hidden">
+            <h2>Ergebnis</h2>
+            <p>Brutto-Bonus: <strong id="brutto-bonus">0.00 CHF</strong></p>
+        </div>
+    </main>
+
+    <script src="app.js"></script>
 </body>
 </html>
-
-
-
