--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
       <div class="main-layout">
         <div class="input-section">
           <div class="input-group">
-            <label id="label-kapital">Kapital (€):</label>
+            <label id="label-kapital">Kapital (CHF):</label>
             <input type="text" id="kapital" value="" />
             <div class="error-message" id="kapital-error"></div>
           </div>
 
           <div class="input-group">
-            <label id="label-normalzins">Normalzins (% p.a.):</label>
+            <label id="label-normalzins">Normalzins (%):</label>
             <input type="text" id="normalzins" value="" />
             <div class="error-message" id="normalzins-error"></div>
           </div>
 
           <div class="input-group">
-            <label id="label-bonuszins">Bonuszins (% p.a.):</label>
+            <label id="label-bonuszins">Bonuszins (%):</label>
             <input type="text" id="bonuszins" value="" />
             <div class="error-message" id="bonuszins-error"></div>
           </div>
